k8s/multi-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-init
spec:
  volumes:
    - name: shared-volume
      emptyDir: {}
  containers:
    - name: main-container
      image: busybox
      command:
        ["sh", "-c", "while true; do cat /work-dir/data.txt; sleep 3600; done"]
      volumeMounts:
        - name: shared-volume
          mountPath: "/work-dir"
